debhelper (10.7) UNRELEASED; urgency=medium

  * dh_usrlocal: Fix call to doit to avoid making it fork a shell.
  * autoconf.pm: Ditto.
  * cmake.pm: Ditto.
  * meson.pm: Ditto.
  * dh_installmodules: Ensure maintscripts are reproducible even with
    multiple kernel versions detected.
  * Apply patches from gregor herrmann to improve autopkgtests.
  * Dh_Lib: Introduce a print_and_complex_doit.
  * Buildsystem: Introduce a complex_doit_in_builddir, which is needed
    by gradle-debian-helper.
  * Dh_Lib: Fix bug in doit + doit_* that made them fork a shell in
    some cases.  For backwards compatibility, there is detection code
    that should make warn for this case.  This can cause a weird
    "Please specify the compatibility level in debian/compat" error if
    the tools have chdir to a different directory.
  * Dh_Lib: Support an optional hashref in doit + doit_* to enable some
    trivial operations in the child process (e.g. redirect stdout).
  * dh_installman: Avoid forking a shell where a simple subprocess call
    is sufficient.
  * Dh_Lib: Avoid forking 2 to 7 subprocesses for adding an autosnippet
    when helper tools use a subroutine rather then a sed snippet.
  * Dh_Lib: Extend autoscript to accept a hashref and use that for
    substituting into the snippet.  This variant (like the subroutine
    variant) avoids forking a lot of subprocesses and need not worry
    about a shell possible interpreting metacharacters.
  * dh_installman: Pass "-l" to man when recoding the manpages.
  * dh_icons: Use hashref based autoscripts generation.
  * dh_installcatalogs: Ditto.
  * dh_installemacsen: Ditto.
  * dh_installmenu: Ditto.
  * dh_installmodules: Ditto.
  * dh_installwm: Ditto.
  * dh_installxfonts: Ditto.
  * dh_systemd_enable: Ditto.
  * dh_systemd_start: Ditto.
  * Dh_Lib: Reduce the use of shell and external commands for
    generating the final maintscripts.
  * Dh_Lib: Make getpackages without any arguments return all